--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Альтер Эго Групп</title>
 </head>
 <body>
@@ -39,7 +41,7 @@
           </nav>
           <article class="map-icon" style="opacity: 0;">
             Get in touch<br>
-            <a href="mailto:info@trionndesign.com">info@trionndesign.com</a>
+            <a href="mailto:info@alterego.by">info@alterego.by</a>
           </article>
           <div class="social">
             <a href="https://www.facebook.com/trionndesignagency/" target="_blank" title="Facebook"
@@ -269,7 +271,8 @@
             </div>
           </div>
           <div class="about-agency wow fadeIn" data-wow-delay="0.2s">
-            <p><strong>Альтэр Эго Групп одно из наиболее ярких агенств беларуси заслужившее доверие и признание в регионе
+            <p><strong>Альтэр Эго Групп одно из наиболее ярких агенств беларуси заслужившее доверие и признание в
+              регионе
               с главным офисом в городе Минск.</strong></p>
             <p>Основано в сентябре 2012.</p>
             <p>Мы воплощаем самые сложные и смелые идеи в жизнь.</p>
@@ -299,19 +302,19 @@
 
       <div class="container">
 
-        <h2 class="wow fadeInUpSmall">Do you want to be a lion? <br>Join Trionn today!</h2>
+        <h2 class="wow fadeInUpSmall">Хочешь стать одним из нас? <br>Напиши нам прямо сейчас!</h2>
 
         <div class="container-small clearfix">
           <div class="block-title draw">
-            <div class="title">Career</div>
-            <p>Do you want to join Trionn?</p>
+            <div class="title">Работа</div>
+            <p>Хочешь стать волонтером?</p>
           </div>
         </div>
 
         <div class="container-medium clearfix">
           <div class="career-withus">
-            <h3>Do you possess creative &amp; <br>innovative thought processes?</h3>
-            <a href="mailto:hr@trionndesign.com" class="apply" title="">Apply Now</a>
+            <h3>Умеешь брать много и <br>швырять далеко?</h3>
+            <a href="mailto:hr@alterego.by" class="apply" title="">Обязательно нажми здесь</a>
           </div>
         </div>
 
@@ -331,16 +334,16 @@
     <div class="start-project aniborder" id="start-project">
       <div class="container clearfix">
         <div class="container-small clearfix">
-          <h2 class="wow fadeInUpSmall">Are you looking for real talent for <br>your dream projects?</h2>
+          <h2 class="wow fadeInUpSmall">Вы ищете надежного подрядчика <br>для реализаци мечты?</h2>
           <div class="block-title draw wow fadeIn" data-wow-delay="0.3s">
-            <div class="title">Inquire</div>
-            <p>We will respond to you within 24 hours</p>
+            <div class="title">Обращайтесь</div>
+            <p>Мы предложим варианты в течении 24 часов</p>
           </div>
 
           <div class="start-project-block wow fadeIn">
             <div class="launch"></div>
-            <h3>Do you have a <br>project in mind?</h3>
-            <a href="/start-a-project" title="">Let's start your project</a>
+            <h3>У вас есть <br>заветная идея?</h3>
+            <a href="#" title="">Давайте поговорим об этом</a>
           </div>
         </div>
       </div>
@@ -353,56 +356,69 @@
       </div>
     </div>
   </section>
+
+
   <div class="contact" id="contact">
     <div class="container clearfix">
       <div class="container-medium clearfix wow fadeInUpSmall">
-        <h4>Quick contact</h4>
-        <p>We can give you a fast response via <br>email, phone call or skype.<span class="line bottom-line"></span></p>
+        <h4>Контакты</h4>
+        <p>Вы можете быстро получить ответ по <br>email, телефону или skype.<span class="line bottom-line"></span></p>
       </div>
       <div class="container-small clearfix wow fadeInUpSmall">
         <ul>
-          <li><a href="mailto:info@trionndesign.com" class="icon inquire-icon" title="">
-            <svg class="inquire-icon-svg" width="132px" height="132px" role="img">
-              <use xlink:href="./images/svg_symbols.svg#inquire-icon"></use>
-            </svg>
-            For business inquiries<span>info@trionndesign.com</span></a></li>
-          <li><a href="tel:+91-9824182099" class="icon mobile-icon" title="">
-            <svg class="mobile-icon-svg" width="132px" height="132px" role="img">
-              <use xlink:href="./images/svg_symbols.svg#mobile-icon"></use>
-            </svg>
-            Call us on<span>+91 98241 82099</span></a></li>
-          <li><a href="skype:sunny.trinity?add" class="icon chat-icon" title="">
-            <svg width="132px" height="132px" class="chat-icon-svg" role="img">
-              <use xlink:href="./images/svg_symbols.svg#chat-icon"></use>
-            </svg>
-            Let's Skype<span>sunny.trinity</span></a></li>
+          <li>
+            <a href="mailto:info@alterego.by" class="icon inquire-icon" title="">
+              <svg class="inquire-icon-svg" width="132px" height="132px" role="img">
+                <use xlink:href="./images/svg_symbols.svg#inquire-icon"></use>
+              </svg>
+              Отправь нам письмо <span>info@alterego.by</span>
+            </a>
+          </li>
+          <li>
+            <a href="tel:+375172902526" class="icon mobile-icon" title="">
+              <svg class="mobile-icon-svg" width="132px" height="132px" role="img">
+                <use xlink:href="./images/svg_symbols.svg#mobile-icon"></use>
+              </svg>
+              Набери номер <span>+375 17 290-25-26</span>
+            </a>
+          </li>
+          <li>
+            <a href="skype:alter.ego.grupp?add" class="icon chat-icon" title="">
+              <svg width="132px" height="132px" class="chat-icon-svg" role="img">
+                <use xlink:href="./images/svg_symbols.svg#chat-icon"></use>
+              </svg>
+              Чат в Skype<span>alter.ego.grupp</span>
+            </a>
+          </li>
         </ul>
+
         <div class="social">
-          <a href="https://www.facebook.com/trionndesignagency/" target="_blank" class="facebook wow fadeInUp"
+          <a href="#" target="_blank" class="facebook wow fadeInUp"
              data-wow-delay="0.1s" title="Facebook">
             <svg width="28px" height="28px" role="img" class="facebook-svg">
               <use xlink:href="./images/svg_symbols.svg#fb-logo"></use>
             </svg>
           </a>
-          <a href="http://www.linkedin.com/company/2715714" target="_blank" class="linkedin wow fadeInUp"
+          <a href="#" target="_blank" class="linkedin wow fadeInUp"
              data-wow-delay="0.2s" title="LinkedIn">
             <svg width="28px" height="28px" role="img" class="linkedin-svg">
               <use xlink:href="./images/svg_symbols.svg#linkedin-logo"></use>
             </svg>
           </a>
-          <a href="https://www.instagram.com/trionndesign/" target="_blank" class="instagram wow fadeInDown"
+          <a href="#" target="_blank" class="instagram wow fadeInDown"
              data-wow-delay="0.3s" title="Instagram">
             <svg width="28px" height="28px" role="img" class="instagram-svg">
               <use xlink:href="./images/svg_symbols.svg#instagram-logo"></use>
             </svg>
           </a>
-          <a href="https://twitter.com/trionn_design" target="_blank" class="twitter wow fadeInUp" data-wow-delay="0.4s"
+          <a href="#" target="_blank" class="twitter wow fadeInUp" data-wow-delay="0.4s"
              title="Twitter">
             <svg width="28px" height="28px" role="img" class="twitter-svg">
               <use xlink:href="./images/svg_symbols.svg#twitter-logo"></use>
             </svg>
           </a>
         </div>
+
       </div>
     </div>
   </div>
@@ -421,7 +437,7 @@
           </svg>
         </svg>
       </a>
-      <span>© 2017 Trionn Design</span>
+      <span>© 2019 Альтэр Эго Групп </span>
     </div>
   </footer>
 </div>
